--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'com.google.code.gson:gson:2.10'
+    implementation 'org.mongodb:mongodb-driver-sync:4.3.1'
+    implementation 'org.mongodb:mongodb-driver-core:4.3.1'
+    implementation 'org.mongodb:mongodb-driver:3.12.8'
 
 }
 
